<resources>
    <string name="app_name">Darts Store</string>

    <string name="size_L">M - 40mm barrel</string>
    <string name="size_M">L - 45mm barrel</string>
    <string name="size_XL">XL - 50mm barrel</string>

    <string name="material_brass">brass</string>
    <string name="material_nickel">silver-nickel</string>
    <string name="material_tungsten">tungsten alloy</string>
    <string name="no_darts_yet">There is no darts yet</string>
    <string name="add_a_darts_set">Get started by adding a darts set</string>
    <string name="model">model:</string>

    <string name="item_price">"Price: "</string>
    <string name="item_quantity">"Quantity: "</string>
    <string name="item_size">"Size: "</string>
    <string name="item_weight">"Weight: "</string>
    <string name="item_material">"Material: "</string>
    <string name="item_supplier">"Supplier: "</string>
    <string name="item_supplier_phone">"Supplier phone: "</string>

    <string name="call_the_supplier">Call the supplier</string>
    <string name="editor_model">Model:</string>

    <string name="menu_editor_save_darts">Save darts</string>
    <string name="menu_editor_delete_darts">Delete darts</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_main_add_darts">Add darts</string>
    <string name="menu_main_delete_all_darts">Delete all darts</string>
    <string name="menu_main_exit">Exit</string>

    <string name="adapter_price">"price: "</string>
    <string name="adapter_quantity">"quantity: "</string>
    <string name="adapter_out_of_stock">Out of stock!\nCall the supplier for more darts!</string>

    <string name="alert_delete_darts">Delete darts?</string>
    <string name="alert_delete">Delete</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_discard">Discard</string>
    <string name="alert_dont_discard">Keep editing</string>
    <string name="alert_discard_changes">Discard your changes and quit editing?</string>
    <string name="alert_confirm_darts_deletion">Confirm darts deletion!</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="alert_all_darts_deletion">Confirm all darts deletion!</string>

    <string name="toast_deletion_failed">Deletion failed!</string>
    <string name="toast_deletion_successful">Deletion successful!</string>
    <string name="toast_cant_save_empty_data">Can\'t save empty data!</string>
    <string name="toast_insertion_failed">Insertion failed!</string>
    <string name="toast_darts_saved">Darts saved successfully!</string>
    <string name="toast_udate_successful">Darts updated successfully!</string>
    <string name="toast_out_of_stock">Out of stock!</string>
    <string name="toast_all_darts_deleted">All darts deleted!</string>

    <string name="check_supplier_phone">You have to enter a supplier\'s phone!</string>
    <string name="check_supplier_name">You have to enter a supplier\'s name!</string>
    <string name="check_weight">You have to enter a weight!</string>
    <string name="check_quantity">Quantity needed!</string>
    <string name="check_price">Any price?</string>
    <string name="check_model_name">You have to enter a darts model name!</string>

    <string name="unknown_material">Unknown material</string>
    <string name="unknown_size">Unknown size</string>
</resources>
